small fixes again on the slides

--- a/sections/slides/personalisation.jade
+++ b/sections/slides/personalisation.jade
@@ -4,9 +4,9 @@ section
 
   section
 
-    p In spite of appearences, I feel a strong esteem for facebook as company
+    p.left In spite of appearences, I feel a strong esteem for facebook as company
     p.right This project is intended to support society, policy maker, journalist and user to get a better understanding about power dynamics in the algorithm age
-    p Facebook has 1 billion ~700 million (maybe) users worldwide, will remain for many years a reference point and their influence can only increase
+    p.left Facebook has 1 billion ~700 million (maybe) users worldwide, will remain for many years a reference point and their influence can only increase
     div.fragment
     p.right society was not probably so ready ?
 
@@ -14,7 +14,7 @@ section
 
   section
 
-    h2 but technology take a different path
+    h2 technology take a different path
     ul
       li
         b software → app → algorithms 
