--- a/sections/slides/socialpolicy.jade
+++ b/sections/slides/socialpolicy.jade
@@ -7,11 +7,11 @@ section
     h2 Collective behavior
 
     ul
-      li.fragment It is driven by 
+      li It is driven by 
         b Social policies
       ul
-        li Social policies are tool for the collectivity to do self-governance and self-awareness
-        li they are intended to dissuade harmful behaviors and incentivate useful behaviors
+        li Tools for the collectivity to do self-governance and self-awareness
+        li Intended to dissuade harmful behaviors and incentivate useful behaviors
 
   section
     img(src="/images/blockingofextremism.png")
