--- a/sections/slides/problemswithpa.jade
+++ b/sections/slides/problemswithpa.jade
@@ -3,14 +3,12 @@ block problemswithpa
 section
 
   section
-
     h2 problems with that?
     ul
       li.fragment Collectivity has no accountability on the 
         b social outcome 
       | is simply powewless
       li.fragment Currently are private company driven by business interest determining what it is better and what it is not
-
 
   section
     blockquote “The algorithms must be made public, so that one can inform oneself as an interested citizen on questions like: what influences my behavior on the internet and that of others?”
@@ -22,13 +20,10 @@ section
       | 2016-10-27
 
   section
-
-    h3 A.K.A.
-
+    h3 "distortion of perception", aka
     ul
       li Filter bubble
       li Echo chambers
       li Algorithm discrimination
-      li Reality distortion 
-      li Technocratic scapegoat
+      li (Technocratic scapegoat ?)
 
