--- a/sections/slides/personalisation.jade
+++ b/sections/slides/personalisation.jade
@@ -4,23 +4,23 @@ section
 
   section
 
-    p.left In spite of appearences, I feel a strong esteem for facebook as company
-    p.right This project is intended to support society, policy maker, journalist and user to get a better understanding about power dynamics in the algorithm age
+    p.left In spite of appearances, I feel a strong esteem for Facebook as a company
+    p.right This project is intended to support society, policy makers, journalists and users to get a better understanding about power dynamics in the algorithm age
     p.left Facebook has 1 billion ~700 million (maybe) users worldwide, will remain for many years a reference point and their influence can only increase
     div.fragment
-    p.right society was not probably so ready ?
+    p.right society was not so ready, probably?
 
   section(data-background="/images/robotAssistant.jpeg")
 
   section
 
-    h2 technology take a different path
+    h2 technology takes a different path
     ul
       li
         b software → app → algorithms 
-        | are our technological assistants, specially: personalisation algorithm
+        | are our technological assistants, especially personalisation algorithms
 
-      li Supposedly help us having a 
+      li Supposedly, they help us having a 
         b better  
         | experience, a more appropriate 
         b information diet
