--- a/sections/slides/pitch.jade
+++ b/sections/slides/pitch.jade
@@ -7,7 +7,7 @@ block pitch
 
       blockquote Did you hear that Facebook is messing up with the timeline?
       p.right 
-        i -- someone, in the U-Ban
+        i -- someone, in the U-Bahn
 
     section
       img(src="/images/pitch_facebookMetadata.png")
