--- a/sections/slides/socialpolicy.jade
+++ b/sections/slides/socialpolicy.jade
@@ -41,7 +41,7 @@ section
 
   section
     p
-      b Personalisation algorithms
-      | are a tools of  
+      b Personalisation algorithms 
+      | are a tool of  
       b Social Politics!
 
