--- a/sections/slides/problemswithpa.jade
+++ b/sections/slides/problemswithpa.jade
@@ -8,7 +8,7 @@ section
       li.fragment Collectivity has no accountability on the 
         b social outcome 
       | is simply powewless
-      li.fragment Currently are private company driven by business interest determining what it is better and what it is not
+      li.fragment Currently private company are driven by business interest determining what it is better and what it is not
 
   section
     blockquote “The algorithms must be made public, so that one can inform oneself as an interested citizen on questions like: what influences my behavior on the internet and that of others?”
