last fixed plus special fx

--- a/sections/slides/howdoesitwork.jade
+++ b/sections/slides/howdoesitwork.jade
@@ -9,7 +9,7 @@ block howdoesitwork
       ul
         li Facebook users who joined our project are named 
           b Supporters
-          |. Tt is an explicit opt-in, you need to install a browser extension do be part of it.
+          |. It is an explicit opt-in, you need to install a browser extension do be part of it.
 
         li.fragment the Extension, 
           b monitors and scrapes  
@@ -18,13 +18,11 @@ block howdoesitwork
         li.fragment All other content, for example the one shared with friends only, are ignored 
           img(src="/images/notpublic.png")
 
-      i.fragment we don't want to risk to leak activities intended for a restricted audience, because we will not have control of the public dataset
+      i.fragment we don't want to risk to leak activities intended for a restricted audience, because we might have no control over the dataset.
 
     section
-
-      h3 key selling point
-
-      p provide information that Facebook cannot give to you, make you decide what you want, enable the user to understand what's going on.
+      h3 Keep user engaged?
+      p we can provide informations Facebook cannot
 
       ul
         li We collect a dataset; publicly 
@@ -46,21 +44,20 @@ block howdoesitwork
 
     section
 
-      h3 Not just personal benefit
+      h3 more happy users, more data for researcher!
 
-      ul
-        li Personalisation algorithms influence the collectively, and collectively have to be analyzed
-        li Researchers, supporters (or bots! ;) can organize themselves and tese these algorithms. For example, you might:
-        ul
-          li.fragment Specifiy a keyword in your Extension (to identify your control group in the dataset, and do analysis only on that)
-          li.fragment Have some fresh/new users behaving in the same way, might facebook treating them equally? which are the parameters that influence more?
+      p.left Personalisation algorithms influence the collectively, and collectivity have to be analyzed
+      p.right Have some fresh/new users behaving in the same way, might facebook treating them equally? which are the parameters that influence more?
+      
+      p 💡 Can you emulate an high income Luxembourg user and compare with a low income granpa near the German border? (different browser)
 
     section
 
-      h3 Disclaimer
-
-      p Currently, with the Tampermonkey alpha, 
-        b we are analyzing all the posts, but not the content.
-      p 
-        b Dataset of the alpha will be deleted when we enter in beta stage
-    
+      h3.blink Warning
+      p.left
+        b ALPHA 
+        | with the Tampermonkey alpha, we are analyzing all the posts, but not the content.
+      h3.blink Warning
+      p.left
+        b BETA 
+        | released in 1 month, and dataset of the alpha will be deleted.
