--- a/sections/slides/problemswithpa.jade
+++ b/sections/slides/problemswithpa.jade
@@ -5,19 +5,17 @@ section
   section
     h2 problems with that?
     ul
-      li.fragment Collectivity has no accountability on the 
+      li Collectivity has no accountability on the 
         b social outcome 
       | is simply powewless
-      li.fragment Currently private company are driven by business interest determining what it is better and what it is not
+      li Currently private company are driven by business interest determining what it is better and what it is not
 
   section
     blockquote “The algorithms must be made public, so that one can inform oneself as an interested citizen on questions like: what influences my behavior on the internet and that of others?”
       | “These algorithms, when they are not transparent, can lead to a distortion of our perception, they narrow our breadth of information.”
 
-    img(src="/images/MerkelGoogleFacebook.png")
-    p 
-      a(href="https://www.rt.com/news/364235-merkel-facebook-google-algorithms/") via RT
-      | 2016-10-27
+    a(href="https://www.rt.com/news/364235-merkel-facebook-google-algorithms/")
+      img(src="/images/MerkelGoogleFacebook.png")
 
   section
     h3 "distortion of perception", aka
