--- a/sections/slides/team.jade
+++ b/sections/slides/team.jade
@@ -2,13 +2,11 @@ block team
 
   section
  
-    h3 and now?
+    h2 Thank you for listening
+    h4 and now?
 
-    ul
-      li we are a small team of developers and philosophers
+    ul.left
+      li we are a small distributed unfunded team of developers and philosophers
       li I'm leaving Berlin :°( but Alberto is here →
-      li We've an English mailing list, only for if you want do something
-      li Using github + Taiga/AGILE metodology
-      li Soon or later, we've to deal with grant, donations
       li Researchers are important
       li Developers of new visualisations even more ;)
