probably if you look at the pattern of my commits, you can guess when a deadline is approaching

--- a/sections/slides/personalisation.jade
+++ b/sections/slides/personalisation.jade
@@ -7,8 +7,7 @@ section
     p.left In spite of appearances, I feel a strong esteem for Facebook as a company
     p.right This project is intended to support society, policy makers, journalists and users to get a better understanding about power dynamics in the algorithm age
     p.left Facebook has 1 billion ~700 million (maybe) users worldwide, will remain for many years a reference point and their influence can only increase
-    div.fragment
-    p.right society was not so ready, probably?
+    p.right Society was not so ready, probably?
 
   section(data-background="/images/robotAssistant.jpeg")
 
