--- a/sections/slides/team.jade
+++ b/sections/slides/team.jade
@@ -10,3 +10,6 @@ block team
       li I'm leaving Berlin :°( but Alberto is here →
       li Researchers are important
       li Developers of new visualisations even more ;)
+
+    p
+      a(href="https://facebook.tracking.exposed") facebook.tracking.exposed
