--- a/sections/slides/team.jade
+++ b/sections/slides/team.jade
@@ -2,14 +2,21 @@ block team
 
   section
  
-    h2 Thank you for listening
     h4 and now?
 
     ul.left
-      li we are a small distributed unfunded team of developers and philosophers
-      li I'm leaving Berlin :°( but Alberto is here →
-      li Researchers are important
-      li Developers of new visualisations even more ;)
+      li we need Researchers and Developers of new visualisations!
+      li Grants and donation with the help of 
+        a(href="https://techcultivation.org/") Center for the Cultivation of Technology
+        | umbrella.
+
+    h4 The current team
+
+    ul.left
+      li We are a small distributed unfunded team of developers and philosophers
+      li I'm leaving Berlin :°( but the fresh CTO, Alberto, is here →
+      li Our advisors are a(href="https://twitter.com/ost_it") Luca and Andrea of OSD
+      li And Kiki is in Bologna, hosting presentation in italy and having good pasta ;)
 
     p
       a(href="https://facebook.tracking.exposed") facebook.tracking.exposed
