--- a/sections/slides/team.jade
+++ b/sections/slides/team.jade
@@ -15,8 +15,8 @@ block team
     ul.left
       li We are a small distributed unfunded team of developers and philosophers
       li I'm leaving Berlin :°( but the fresh CTO, Alberto, is here →
-      li Our advisors are
-        a(href="https://twitter.com/ost_it") Luca and Andrea of OSD
+      li Our advisors are 
+        a(href="https://twitter.com/osd_it") Luca and Andrea of OSD
       li And Kiki is in Bologna, hosting presentation in italy and having good pasta ;)
 
     p
