last last last mods

--- a/sections/slides/pitch.jade
+++ b/sections/slides/pitch.jade
@@ -20,5 +20,5 @@ block pitch
 
     section
 
-      h3 This was the 30 seconds pitch
+      h3 this is to see how a personalisation algorithm act on my information flow
       p now we'll see why it is right ;)
