--- a/sections/slides/team.jade
+++ b/sections/slides/team.jade
@@ -17,7 +17,7 @@ block team
       li I'm leaving Berlin :°( but the fresh CTO, Alberto, is here →
       li Our advisors are 
         a(href="https://twitter.com/osd_it") Luca and Andrea of OSD
-      li And Kiki is in Bologna, hosting presentation in italy and having good pasta ;)
+      li And Kiki is in Bologna, hosting presentation in Italy and having good pasta ;)
 
     p
       a(href="https://facebook.tracking.exposed") facebook.tracking.exposed
