--- a/sections/slides/problemswithpa.jade
+++ b/sections/slides/problemswithpa.jade
@@ -7,7 +7,7 @@ section
     ul
       li Collectivity has no accountability on the 
         b social outcome 
-      | is simply powewless
+      | is simply powerless
       li Currently private company are driven by business interest determining what it is better and what it is not
 
   section
