this is really the last

--- a/sections/slides/pitch.jade
+++ b/sections/slides/pitch.jade
@@ -12,8 +12,10 @@ block pitch
       img(src="/images/pitch_facebookMetadata.png")
 
     section
+      p In order to see the effects of a personalisation algorithm:
       img(src="/images/pitch_simpleviz.png")
 
     section
       img(src="/images/pitch_impact.png")
+      p after September, a small team is born around the project, and we took steps to reach a beta phase.
 
