--- a/sections/slides/socialpolicy.jade
+++ b/sections/slides/socialpolicy.jade
@@ -12,6 +12,7 @@ section
       ul
         li Tools for the collectivity to do self-governance and self-awareness
         li Intended to dissuade harmful behaviors and incentivate useful behaviors
+      p Social policies have to be openly discussed
 
   section
     img(src="/images/blockingofextremism.png")
