kill your darlings again

--- a/sections/slides/howdoesitwork.jade
+++ b/sections/slides/howdoesitwork.jade
@@ -21,26 +21,14 @@ block howdoesitwork
       i.fragment we don't want to risk to leak activities intended for a restricted audience, because we might have no control over the dataset.
 
     section
-      h3 Keep user engaged?
-      p we can provide informations Facebook cannot
+      h3 how to keep supporters engaged?
+      p we can provide informations Facebook cannot!
 
-      ul
-        li We collect a dataset; publicly 
-          a(href="https://facebook.tracking.exposed/impact") accessible
-          |, easy to be mirrored
-        li.fragment the dataset is composed by:
-          ul
-            li 
-              b metadata
-              | useful to understand Facebook behavior.
-            li 
-              b the (post) impression 
-              | content, useful to provide high level analysis:
-            ul.fragment
-              li Escape the filter bubble
-              li Understand your personal trends
-              li Understand you friends influence
-              li To see the Human networks you belong
+      ul.fragment
+        li Escape the filter bubble
+        li Understand your personal trends
+        li Understand you friends influence
+        li To see the Human networks you belong
 
     section
 
@@ -49,7 +37,7 @@ block howdoesitwork
       p.left Personalisation algorithms influence the collectively, and collectivity have to be analyzed
       p.right Have some fresh/new users behaving in the same way, might facebook treating them equally? which are the parameters that influence more?
       
-      p 💡 Can you emulate an high income Luxembourg user and compare with a low income granpa near the German border? (different browser)
+      p 💡  Can you emulate an high income Luxembourg user and compare with a low income granpa near the German border? (different browser)
 
     section
 
