--- a/sections/slides/problemswithpa.jade
+++ b/sections/slides/problemswithpa.jade
@@ -11,8 +11,7 @@ section
       li Currently private company are driven by business interest determining what it is better and what it is not
 
   section
-    blockquote “The algorithms must be made public, so that one can inform oneself as an interested citizen on questions like: what influences my behavior on the internet and that of others?”
-      | “These algorithms, when they are not transparent, can lead to a distortion of our perception, they narrow our breadth of information.”
+    blockquote “These algorithms, when they are not transparent, can lead to a distortion of our perception, they narrow our breadth of information.”
 
     a(href="https://www.rt.com/news/364235-merkel-facebook-google-algorithms/")
       img(src="/images/MerkelGoogleFacebook.png")
