--- a/sections/slides/netzpolitick.jade
+++ b/sections/slides/netzpolitick.jade
@@ -35,7 +35,17 @@ html
     .reveal
       .slides
 
-        include landing
+        section
+          h3 
+            a(href="https://facebook.tracking.exposed") https://facebook.tracking.exposed
+          p.right c-base, Netzpolitick Abend, 1st November 2016
+          p.right Claudio Agosti 
+            a(href="https://twitter.com/_vecna") @_vecna
+          p.right 
+            a(href="https://keybase.io/vecna/key.asc") 9EC3A8FABE7EB8EA
+
+
+
         include pitch
         include personalisation
         include socialpolicy
