revisited structure to keep talks

--- a/sections/index.jade
+++ b/sections/index.jade
@@ -53,7 +53,7 @@ html
             li
               a(href='/impact') Stats
             li
-              a(href='/netzpolitick/') Slides
+              a(href='/talks/') Talks
 
 
     div#vision
