--- a/sections/talks/netzpolitischer054.jade
+++ b/sections/talks/netzpolitischer054.jade
@@ -14,7 +14,7 @@ html
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    title facebook.tracking.exposed - 10 minutes presentation
+    title facebook.tracking.exposed - Netzpolitischer Abend 054
 
     script.
       function blink() {
@@ -44,17 +44,15 @@ html
           p.right 
             a(href="https://keybase.io/vecna/key.asc") 9EC3A8FABE7EB8EA
 
-
-
-        include pitch
-        include personalisation
-        include socialpolicy
-        include problemswithpa
-        include project
-        include howdoesitwork
-        include interfaces
-        include roadmap
-        include team
+        include ../slides/pitch
+        include ../slides/personalisation
+        include ../slides/socialpolicy
+        include ../slides/problemswithpa
+        include ../slides/project
+        include ../slides/howdoesitwork
+        include ../slides/interfaces
+        include ../slides/roadmap
+        include ../slides/team
 
     script.
       Reveal.initialize({
