--- a/sections/beta.jade
+++ b/sections/beta.jade
@@ -3,6 +3,11 @@ html
   head
     link(rel='stylesheet', href='/css/index.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
+    script(type='text/javascript', src='/js/vendor/lodash.min.js')
+    script(type='text/javascript', src='/js/vendor/jquery.js')
+    script(type='text/javascript', src='/js/vendor/collapse.js')
+    script(type='text/javascript', src='/js/vendor/bootstrap.min.js')
+
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
@@ -11,24 +16,68 @@ html
   body
  
     div.jumbotron
-      div.head-text.fb-color
+      div.head-text.center.fb-color
         div.container-fluid
-          h2 ß
-          h1.center 
-            facebook.tracking.exposed
+          h1 facebook.tracking.exposed
+      div.container-fluid
+        p.smile.center description 
+          span.green 95% 
+          | ⌁ infrastructure 
+          span.red 70% 
+          | ⌁ project management 
+          span.green effective & chill
+          | ⌁ stability  
+          span.yellow ß 
+          | ⌁ money
+          span.red 
+            a(href="https://paypal.me/claudioGifts", target="_blank") Zero
 
-    div.propaganda
+    nav.navbar.navbar-default
+      div.container
+        div.navbar-header
+          button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded="false")
+            span(id="sr-only") Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
 
-      ul
-        li Privacy Model
-        li Data mining 
-        li Native extension
-        li Researches approach and experiments you can do
-      
-      p still TODO
+        div.collapse.navbar-collapse(id="thenavbar")
+          ul.nav.navbar-nav
+            li
+              a(href='#privacymodel') Privay Model
+            li
+              a(href='#datamining') Data mining
+            li
+              a(href='#extension') Native extension
+            li
+              a(href='#researches') Researches approach
+            li
+              a(href='#fundraising') Fundraising
+            li
+              a(href='#joinus') Join Us!
 
-      ul
-        li donation/fundraising
+    div#privacymodel
+      div.propaganda
+        include privacymodel
 
+    div#datamining
+      div.propaganda
+        include datamining
+
+    div#extension
+      div.propaganda
+        include extension
+
+    div#researches
+      div.propaganda
+        include researches
+
+    div#fundraising
+      div.propaganda
+        include fundraising
+
+    div#joinus
+      div.propaganda
+        include joinus
 
     div.footer 
