explained the hash truth of instability

--- a/sections/index.jade
+++ b/sections/index.jade
@@ -25,10 +25,8 @@ html
           span.green 75% 
           | ⌁ infrastructure 
           span.red 20% 
-          | ⌁ time 
-          span.yellow endangered 
           | ⌁ stability  
-          span.red ALPHA STAGE 
+          span.red BROKEN ALPHA 
           | ⌁ funding 
           span.red 
             a(href="https://paypal.me/claudioGifts", target="_blank") Zero
