English language didn't do anything bad to me, I don't know why I'm mistreating it so badly

--- a/sections/useit.jade
+++ b/sections/useit.jade
@@ -1,15 +1,13 @@
 block useit
-  h2 Use It - Or not so much :(
+  h2 (not) Use It now :(
 
-  b(class="blue-fb") At 15 of November -- The current implementation is broken!
-  p Installing the extension will not provide you any insight. The new release will be available soon. This is going to happen near the end of November 2016.
+  b(class="blue-fb") updates 15 of November: the software implementation is temporarly broken!
+  p Installing the extension will not provide you any insight. A new release will be available soon, by the end of November 2016.
 
-  p(class="blue-fb") Upcoming improvements: we will clarify
-    b  which data are collected (only the public posts) + how the data are analized and made as open data + a robust user registration + permit 'control group'. The extension will not be based on TamperMoney, rather would be a native Chrome/Firefox add-ons.
+  p(class="blue-fb") Improvements: we will clarify
+    b  which data are collected, how the data are analized and how the open data works. The extension will not be based on TamperMoney, rather would be a native Chrome/Firefox add-ons.
 
-  h3 distribute the effort to absert a global phenomena is not easy at is seems ;)
-
-  p 1. 15 Nov update: if you would like get updated from the script -- Install 
+  p 1. Still, if you want join the supporters: Install 
     a(href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo") Tampermonkey for Chrome 
   p 2. Then, install the 
     b facebook.tracking.exposed script
