--- a/sections/index.jade
+++ b/sections/index.jade
@@ -15,23 +15,8 @@ html
     title facebook tracking exposed
 
   body
- 
-    div.jumbotron
-      div.head-text.center.fb-color
-        div.container-fluid
-          h1 facebook.tracking.exposed
-      div.container-fluid
-        p.smile.center description 
-          span.green 75% 
-          | ⌁ infrastructure 
-          span.red 60% 
-          | ⌁ time 
-          span.yellow endangered 
-          | ⌁ stability  
-          span.yellow ß 
-          | ⌁ funding 
-          span.red 
-            a(href="https://paypal.me/claudioGifts", target="_blank") Zero
+
+    include header
 
     nav.navbar.navbar-default
       div.container
