--- a/styles/index.styl
+++ b/styles/index.styl
@@ -5,7 +5,8 @@
   box-sizing border-box
 
 body
-  font-family 'Source Code Pro', monospace
+  font-family 'EB Garamond', serif
+  margin 0
 
 p
   font-size 1.3em
@@ -23,10 +24,6 @@ p
 .monospace
   font-family 'Source Code Pro', monospace
   margin 0
-
-.head-text
-  text-transform uppercase
-  color #fff
 
 .propaganda
   padding-right 10%
@@ -57,22 +54,6 @@ p
   font-size 0.75em
   color darkgrey
 
-.quote
-  padding-left 20%
-  color darkgrey
-
-.smile
-  font-family Arial
-  font-size 0.8em
-
-.harsh
-  text-align right
-  color #3b5999
-
-.line
-  background #3b5999
-  color #334455
-
 .link
   padding 3px
   font-size 0.9em
@@ -90,9 +71,6 @@ p
   text-align left
   border-left 8%
   background #DCEFE8
-
-.facebook
-  background #3b5999
 
 .larger-content
   margin 30px auto
@@ -114,17 +92,11 @@ p
     color #444
     font-size 12px
 
-.fontana
-  font-family: museo-slab,Georgia,"Times New Roman",Times,serif
-
 .long
   font-size 0.8em
 
 .fb-color
   background-color #3b5999
-
-.blue-fb
-  color #3b5999
 
 .lightblue-fb
   color #8b9dc3
@@ -166,45 +138,6 @@ p
   padding 5%
   width 100%
 
-
-// modal w3c copy-pasta
-.modal
-  display none
-  position fixed
-  z-index 1
-  left 0
-  top 0
-  width 100%
-  height 100%
-  overflow auto
-  background-color rgb(0,0,0)
-  background-color rgba(0,0,0,0.4)
-
-.modal-content
-  background-color #fefefe
-  margin 15% auto
-  padding 20px
-  border 1px solid #888;
-  width 80%
-
- .avatar img
-    max-width: 60%
-
- .logo
-   max-width: 32px
-   margin-right: 3%
-
-.close
-  color #aaa
-  float right
-  font-size 28px
-  font-weight bold
-
-.close:hover
-.close:focus
-  color black
-  text-decoration none
-  cursor pointer
 
 .team-name
   font-size 2em
