restructing site in progress

--- a/sections/links.jade
+++ b/sections/links.jade
@@ -2,40 +2,40 @@ block links
 
   h2 Links
 
-  .link.right 
+  .link.right-link 
     a(href="https://medium.com/message/ferguson-is-also-a-net-neutrality-issue-6d2f3db51eb0") Ferguson crisis and how Facebook penalizes content 
     .smaller (6 minutes reading) by 
       a(href="https://twitter.com/zeynep") Zeynep Tufekci
 
-  .link.left 
+  .link.left-link 
     a(href="https://theintercept.com/2016/06/09/facebook-outreach-tool-ignores-black-lives-matter/") Facebook outreach tool ignores Black Lives Matter
     
-  .link.right 
+  .link.right-link 
     a(href="https://www.theguardian.com/technology/2016/jun/07/its-your-duty-to-complain-thats-how-companies-improve") With big tech business making regular political and ethical blunders, it is our responsibility to complain – and let them know they must do better
 
-  .link.left 
+  .link.left-link 
     a(href="https://hbr.org/2015/05/customer-data-designing-for-transparency-and-trust") Designing for Transparency and Trust
 
-  .link.right 
+  .link.right-link 
     a(href="http://arxiv.org/abs/1606.08813") EU regulations on algorithmic decision-making and a right to explanation
 
-  .link.left 
+  .link.left-link 
     a(href="http://www.recode.net/2016/6/14/11923286/facebook-emotional-contagion-controversy-data-research-review-policy-ethics") How Facebook's emotional contagion controversy led to the company's new research review policy
 
-  .link.right 
+  .link.right-link 
     a(href="https://auditingalgorithms.wordpress.com/background-readings/") Long bibliography on Auding Algorithm
 
-  .link.left 
+  .link.left-link 
     a(href="https://www.technologyreview.com/s/601696/facebooks-rules-for-experimenting-on-you/") Facebook rules on experimenting on you, or at least what they decided they can tell you
 
-  .link.right 
+  .link.right-link 
     a(href="http://www.hackerfactor.com/blog/index.php?/archives/726-Facebook-Tracking.html") Technical analysis of Facebook tracking
 
-  .link.left
+  .link.left-link
     a(href="http://mobile.reuters.com/article/idUSKCN0ZB00M") Google, Facebook quietly moves toward automatic blocking of extremist videos
 
-  .link.right
+  .link.right-link
     a(href="http://www.bloomberg.com/view/articles/2016-07-05/facebook-is-bad-for-democracy") Facebook is bad for democracy 
 
-  .link.left
+  .link.left-link
     a(href="http://commondreams.org/views/2016/07/14/whats-good-facebook-not-so-good-democracy") What's good for facebook is not so good for democracy
