--- a/sections/vision.jade
+++ b/sections/vision.jade
@@ -1,4 +1,6 @@
 block vision
-  h2 Vision
 
-  p Our vision is to increase transparency behind personalization algorithms, so that people can have more effective control of their online Facebook experience and more awareness of the information to which they are exposed. 
+  div.left
+    p Our 
+      span.garamond vision 
+      span is to increase transparency behind personalization algorithms, so that people can have more effective control of their online Facebook experience and more awareness of the information to which they are exposed. 
