--- a/styles/index.styl
+++ b/styles/index.styl
@@ -8,11 +8,21 @@ body
   font-family 'EB Garamond', serif
   margin 0
 
-p
-  font-size 1.3em
+.garamond
+  font-family 'EB Garamond', serif
+  margin 0
+
+.left
+  text-align left
+
+.right
+  text-align right
 
 .center
   text-align center
+
+p
+  font-size 1.3em
 
 .theinputfield
   width 70%
@@ -58,16 +68,15 @@ p
   padding 3px
   font-size 0.9em
 
-.right
+.right-link
   border-right 8%
   text-align right
   background #E8FFC2
   color #3b59999
-
   a
     color #3b59999
 
-.left
+.left-link
   text-align left
   border-left 8%
   background #DCEFE8
@@ -78,7 +87,6 @@ p
 .main-content
   margin 50px auto
   max-width 600px
-
   p
     line-height 1.6
 
@@ -87,7 +95,6 @@ p
   max-width 600px
   border-top 1px solid #444
   padding 20px 0
-
   p
     color #444
     font-size 12px
@@ -95,26 +102,21 @@ p
 .long
   font-size 0.8em
 
-.fb-color
-  background-color #3b5999
-
-.lightblue-fb
-  color #8b9dc3
+.big
+  padding-top 10%
+  font-size 3em
 
 .white
   color white
 
+.blue
+  color 3c5a99
+
+.orange
+  color fd5308
+
 .green
-  color green
-
-.grey
-  color #d3d3d3
-
-.red
-  color red
-
-.yellow
-  color orange
+  color 66b032
 
 .italic
   font-style italic
@@ -122,13 +124,10 @@ p
 .examplelist
   margin-left 10%
   margin-right 10%
-
   p
     size: 1.3em
-
   a
     color darkblue
-
   a:hover
     color red
     font-style normal
@@ -137,7 +136,6 @@ p
   background-color paleyellow
   padding 5%
   width 100%
-
 
 .team-name
   font-size 2em
