--- a/sections/index.jade
+++ b/sections/index.jade
@@ -1,13 +1,19 @@
 doctype html
 html
   head
-    link(rel='stylesheet', href='/css/index.css')
+    link(rel='stylesheet', href='/css/reveal.css')
+    link(rel='stylesheet', href='/css/reveal-solarized.css')
     link(rel='stylesheet', href='/css/bootstrap.css')
+    link(rel='stylesheet', href='/css/index.css')
+
+    script(type='text/javascript', src='/js/vendor/reveal.min.js')
+    script(type='text/javascript', src="/js/vendor/reveal-head.min.js")
+    script(type='text/javascript', src='/js/vendor/jquery.js')
+    script(type='text/javascript', src='/js/vendor/bootstrap.min.js')
     script(type='text/javascript', src='/js/vendor/lodash.min.js')
     script(type='text/javascript', src='/js/vendor/jquery.js')
     script(type='text/javascript', src='/js/vendor/collapse.js')
-    script(type='text/javascript', src='/js/vendor/bootstrap.min.js')
-    script(type='text/javascript', src='/js/local/suggest.js')
+
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
@@ -16,61 +22,33 @@ html
 
   body
 
-    include header
+    .reveal
 
-    nav.navbar.navbar-default
-      div.container
-        div.navbar-header
-          button.navbar-toggle.collapsed(type="button" data-toggle="collapse" data-target="#thenavbar" aria-expanded="false")
-            span(id="sr-only") Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
+      include header
 
-        div.collapse.navbar-collapse(id="thenavbar")
-          ul.nav.navbar-nav
-            li
-              a(href='#vision') What
-            li
-              a(href='#useit') Use It 
-            li
-              a(href='#team') About Us
-            li
-              a(href='/impact') Stats
-            li
-              a(href='/talks/') Talks
-
-
-    div#vision
-      div.polite-propaganda
-        include vision
-
-    div#mission
-      div.propaganda
-        include mission
-
-    div#background
-      div.propaganda
-        include background
-
-    div#problemsInPA
-      div.propaganda
-        include problemsInPA
-
-    div#useit
-      div.propaganda
-        include useit
-
-    div#getinvolved
-      div.propaganda
-        include getinvolved 
-
-    div#team
-        div.propaganda
+      .slides
+        section
+          section
+            include vision
+            include mission
+          section
+            include extensionInstalled
+          section
+            include dataCollected
+          section
+            include dataExtracted
+          section
+            include partecipationBenefit
+          section
+            include background
+          section
+            include problemsInPA
+          section
             include team
 
-    div#links
-      div.propaganda 
-        include links
-
-    div.footer 
+      script.
+        Reveal.initialize({
+          controls: true,
+          progress: true,
+          history: true,
+          center: true });
