--- a/sections/mission.jade
+++ b/sections/mission.jade
@@ -1,4 +1,7 @@
 block mission
-  
-  p Our mission is to help researchers assess how current filtering mechanisms work and how personalization algorithms should be modified in order to minimize the dangerous social effects of which they are indirectly responsible and to maximize the values, both individual and social, that algorithms should incorporate.
+ 
+  div.left
+    p Our 
+      span.garamond mission 
+      span is to help researchers assess how current filtering mechanisms work and how personalization algorithms should be modified in order to minimize the dangerous social effects of which they are indirectly responsible and to maximize the values, both individual and social, that algorithms should incorporate.
 
