add link talk in milan

--- a/sections/talks/landing.jade
+++ b/sections/talks/landing.jade
@@ -47,6 +47,7 @@ html
             th Where
             th Event & Slides
             th Video
+            th Language
         tbody
           tr
             td 1st November '16
@@ -55,7 +56,16 @@ html
               a(href="/talks-netzpolitischer054/") Netzpolitischer Abend 54
             td
               a(href="https://vimeo.com/189842857") https://vimeo.com/189842857
+            td English
           tr
+            td 2nd December '16
+            td cantiere, Milan
+            td 
+              a(href="/talks-cantiere/") Slide 
+              a(href="http://www.cantiere.org/eventi/cyber-resistance-5-edition/") Cyber*Resistance 
+            td 
+            td Italian
+         tr
             td ??
             td ??
             td ??
