added link and slide for cyberresistance

--- a/sections/talks/landing.jade
+++ b/sections/talks/landing.jade
@@ -61,8 +61,8 @@ html
             td 2nd December '16
             td cantiere, Milan
             td 
-              a(href="/talks-cantiere/") Slide 
-              a(href="http://www.cantiere.org/eventi/cyber-resistance-5-edition/") Cyber*Resistance 
+              a(href="/talks-cyberresistance/") Slide Cyber*Resistance
+              a(href="http://www.cantiere.org/eventi/cyber-resistance-5-edition/") - event link
             td 
             td Italian
          tr
