updated with Hack'n'Tell and PyData events -- @vrde

--- a/sections/talks/landing.jade
+++ b/sections/talks/landing.jade
@@ -50,6 +50,15 @@ html
             th Language
         tbody
           tr
+            td 2nd December '16
+            td cantiere, Milan
+            td 
+              a(href="/talks-cyberresistance/") Cyber*Resistance
+              | 
+              a(href="http://www.cantiere.org/eventi/cyber-resistance-5-edition/") [event]
+            td 
+            td Italian
+          tr
             td 1st November '16
             td c-base, Berlin
             td 
@@ -58,18 +67,24 @@ html
               a(href="https://vimeo.com/189842857") https://vimeo.com/189842857
             td English
           tr
-            td 2nd December '16
-            td cantiere, Milan
-            td 
-              a(href="/talks-cyberresistance/") Slide Cyber*Resistance
-              a(href="http://www.cantiere.org/eventi/cyber-resistance-5-edition/") - event link
-            td 
-            td Italian
-         tr
+            td 25th October '16
+            td c-base, Berlin
+            td
+              a(href="https://docs.google.com/presentation/d/e/2PACX-1vR1Tz-G2fm9Nu0oe8lrAoG8aYCamT2kpZAn98B-AHP-ZNli88A4u5hOKrp-UMBDP4Iq2NP3Bl3xY0C5/pub?start=false&loop=false&slide=id.p") Hack'n'Tell
+            td
+              a(href="https://twitter.com/_vecna/status/791002928211431424") evidences ;)
+            td English
+          tr
+            td 19th October '16
+            td Berlin
+            td
+              a(href="https://docs.google.com/presentation/d/1uDd2oNxWSOJPfm-Jrm0k-4SBS2BNAomfhF6Ef_609So/edit#slide=id.p") PyData
+            td
+            td English
+          tr
             td ??
             td ??
             td ??
             td ??
-
 
     div.footer 
