I was writing jade like I do in Markdown

--- a/sections/useit.jade
+++ b/sections/useit.jade
@@ -6,7 +6,9 @@ block useit
   .container-fluid
     img(src="/images/posttype-alpha.png")
 
-  p when Facebook updated their HTML code structure, the client side extension for interpret the **post kind**, (if is promoted or feed) broken, making results everything as a promoted feed! Whatever, this is OK for the project in such experimental stage. The months in alpha release had reach enough successes:
+  p when Facebook updated their HTML code structure, the client side extension for interpret the
+    b post kind
+    |, (if is promoted or feed) broken, making results everything as a promoted feed! Whatever, this is OK for the project in such experimental stage. The months in alpha release had reach enough successes:
   ul
     li A team has been created, and is what matter more.
     li Privacy problems has been discussed, creating a privacy model for the ß release.
@@ -14,7 +16,9 @@ block useit
       b try the 
       a(href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/kbeabbonbnjinbemmjgpdccmfnifokgc") experimental chrome extension
       |.
-    li A new approach to develop distributed **parsers**
+    li A new approach to develop distributed
+      b parsers
+      |.
 
   p A new release will be available soon, by the beginning of December 2016, check the code progress in the  
     a(href="https://github.com/tracking-exposed/facebook/tree/refactor-code") chrome extension development branch
