changed onboard message

--- a/extension/styles/onboarding.scss
+++ b/extension/styles/onboarding.scss
@@ -16,4 +16,10 @@
         font-family: monospace;
         width: 66%;
     }
+
+    .fbtrex--note {
+        padding: 12px;
+        width: 66%;
+    }
 }
+
